<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/custom_rectangle"
        android:elevation="1dp">

        <EditText
            android:id="@+id/input_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_toStartOf="@+id/search"
            android:background="@android:color/transparent"
            android:layout_weight="1.01"
            android:ems="10"
            android:hint="@string/preferred_loc"
            android:inputType="textNoSuggestions"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>

        <ImageButton
            android:id="@+id/search"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_alignBottom="@id/search_bar"
            android:layout_alignParentEnd="true"
            android:elevation="1dp"
            android:src="@drawable/ic_search_36dp" />
        <ImageButton
            android:id="@+id/filters_btn"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_alignRight="@id/search_bar"
            android:layout_alignParentEnd="true"
            android:elevation="2dp"
            android:src="@drawable/ic_filters_default"
            />
    </LinearLayout>


    <fragment
        android:id="@+id/current_location"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="0dp" />



           <include
               android:id="@+id/filter"
               layout="@layout/filter"
               />


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorAccent"
        android:gravity="center">

        <include
            android:id="@+id/hotel_overview"
            layout="@layout/hotel_list_item_welcome_activity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary">
            <include layout="@layout/bottom_navigation_view" />

        </RelativeLayout>

    <!-- Countdown -->

    <TableLayout
        android:id="@+id/countdownBox"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/current_location"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0"
        android:background="#1A2E62"
        android:gravity="center">

        <TextView
            android:id="@+id/countdownTextNoch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="Noch" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/countdownTextHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" HH "
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/countdownTextHoursGap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/countdownTextMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" MM "
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/countdownTextMinutesGap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/countdownTextSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" SS "
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </TableRow>

        <TextView
            android:id="@+id/countdownTextRabatt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="bis zu 50% Rabatt" />


    </TableLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButtonLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="338dp"
            android:layout_marginTop="599dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="76dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/white"
            app:srcCompat="@android:drawable/ic_menu_mylocation"
            />
    </android.support.constraint.ConstraintLayout>



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/animation_maps" />



    </android.support.constraint.ConstraintLayout>
    <!-- END COUNTDOWN -->

</RelativeLayout>

