<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/animationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/blank_bar"
        android:layout_width="210dp"
        android:layout_height="62dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="100dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondHelpBox"
        android:layout_width="210dp"
        android:layout_height="62dp"

        android:background="@color/white"
        android:padding="10dp"
        android:text="Finde dein Hotel"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/blank_bar"
        app:layout_constraintTop_toTopOf="@+id/blank_bar" />


    <TextView
        android:id="@+id/firstHelpBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="Willkommen!"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blank_bar" />

</android.support.constraint.ConstraintLayout>
