<android.support.design.widget.BottomNavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:itemBackground="@color/colorPrimaryDark"
    app:menu="@menu/bottom_bar_menu"
    app:itemIconSize="33dp"
    app:itemIconTint="@color/white"
    app:labelVisibilityMode="unlabeled"

    />